--- a/YourTrips.Server/YourTrips.Server.csproj
+++ b/YourTrips.Server/YourTrips.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Core\" />
+    <Folder Include="Applications\" />
+    <Folder Include="Infrastructure\" />
+    <Folder Include="Web\" />
   </ItemGroup>
 
 </Project>
