realizerd clean architecture add ServiceCollectionExtensions and transfer test in folder Tests tryel 2

--- a/YourTrips.Server/YourTrips.Web.csproj
+++ b/YourTrips.Server/YourTrips.Web.csproj
@@ -31,4 +31,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\YourTrips.Application\YourTrips.Application.csproj" />
+    <ProjectReference Include="..\YourTrips.Infrastructure\YourTrips.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
