Add all configurations and realization DbContext

--- a/YourTrips.Web/YourTrips.Web.csproj
+++ b/YourTrips.Web/YourTrips.Web.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <RootNamespace>YourTrips.Web</RootNamespace>
+    <AssemblyName>YourTrips.Web</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
