--- a/YourTrips.Infrastructure/YourTrips.Infrastructure.csproj
+++ b/YourTrips.Infrastructure/YourTrips.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MailKit" Version="4.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -31,6 +32,10 @@
   <ItemGroup>
     <ProjectReference Include="..\YourTrips.Application\YourTrips.Application.csproj" />
     <ProjectReference Include="..\YourTrips.Core\YourTrips.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\ProfileServices\" />
   </ItemGroup>
 
 </Project>
